--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -7,68 +7,149 @@
     tools:context=".MovieDetails"
     android:background="#000000">
 
-    <LinearLayout
-        android:layout_width="390dp"
-        android:layout_height="666dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:orientation="vertical">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="390dp"
+            android:layout_height="666dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/iv_poster"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="30dp"
-            app:srcCompat="@android:drawable/alert_dark_frame" />
-
-
-        <TextView
-            android:id="@+id/tv_rating_label"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/rating_label"
-            android:textColor="@android:color/background_light"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/tv_rating"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:textColor="@android:color/background_light" />
+            <ImageView
+                android:id="@+id/iv_poster"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="30dp"
+                app:srcCompat="@android:drawable/alert_dark_frame" />
 
 
-        <TextView
-            android:id="@+id/tv_release_label"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/release_label"
-            android:textColor="@android:color/background_light"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/tv_rating_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/rating_label"
+                android:textColor="@android:color/background_light"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_release"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:textColor="@android:color/background_light" />
+            <TextView
+                android:id="@+id/tv_rating"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:textColor="@android:color/background_light" />
 
-        <TextView
-            android:id="@+id/tv_description_label"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/description_label"
-            android:textColor="@android:color/background_light"
-            android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tv_plot"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:textColor="@android:color/background_light" />
+            <TextView
+                android:id="@+id/tv_release_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/release_label"
+                android:textColor="@android:color/background_light"
+                android:textStyle="bold" />
 
-    </LinearLayout>
+            <TextView
+                android:id="@+id/tv_release"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:textColor="@android:color/background_light" />
+
+            <TextView
+                android:id="@+id/tv_description_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/description_label"
+                android:textColor="@android:color/background_light"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tv_plot"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="15dp"
+                android:textColor="@android:color/background_light" />
+            <LinearLayout
+                    android:id="@+id/trailer_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:orientation="vertical">
+
+                    <View
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:background="@android:color/darker_gray" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginTop="10dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/textView"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="10"
+                            android:text="@string/trailer_label"
+                            android:textColor="@android:color/background_light"
+                            android:textSize="16sp"
+                            android:textStyle="bold" />
+
+                    <Button
+                        android:id="@+id/btn_trailer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="@color/cardview_light_background"
+                        android:text="@string/trailer_button_label" />
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/review_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="vertical">
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@android:color/darker_gray" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="10dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textVisew2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="10"
+                        android:text="@string/reviews_label"
+                        android:textColor="@android:color/background_light"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv_review"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="@android:color/background_light"
+                        android:text="TextView"
+                        android:textSize="14sp" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+        </LinearLayout>
+</ScrollView>
+
 </RelativeLayout>
