--- a/app/src/main/res/layout/activity_movie_details.xml
+++ b/app/src/main/res/layout/activity_movie_details.xml
@@ -28,7 +28,7 @@
 
 
             <ToggleButton
-                android:id="@+id/toggleButton"
+                android:id="@+id/btn_favorite"
                 android:layout_width="109dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
@@ -101,8 +101,8 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/textView"
-                            android:layout_width="0dp"
+                            android:id="@+id/tv_trailer_label"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="10"
                             android:text="@string/trailer_label"
@@ -138,7 +138,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textVisew2"
+                        android:id="@+id/tv_reviews"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="10"
@@ -153,7 +153,6 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:textColor="@android:color/background_light"
-                        android:text="TextView"
                         android:textSize="14sp" />
 
                 </LinearLayout>
