--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -10,4 +10,7 @@
     <item
         android:id="@+id/item_rating"
         android:title="@string/sort_by_rating" />
+    <item
+        android:id="@+id/item_favorites"
+        android:title="@string/show_favorites" />
 </menu>
