--- a/app/src/main/res/layout-land/activity_movie_details.xml
+++ b/app/src/main/res/layout-land/activity_movie_details.xml
@@ -65,29 +65,24 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginTop="5dp"
-            android:text="ratiing"
             android:textColor="@android:color/background_light"
             app:layout_constraintStart_toEndOf="@+id/iv_poster"
-            app:layout_constraintTop_toBottomOf="@+id/tv_rating_label"
-            tools:layout_editor_absoluteX="115dp" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_rating_label" />
 
         <TextView
             android:id="@+id/tv_release"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
-            android:text="gkasdgklasdjgasdkljgklasdg"
             android:textColor="@android:color/background_light"
             app:layout_constraintStart_toEndOf="@+id/iv_poster"
-            app:layout_constraintTop_toBottomOf="@+id/tv_release_label"
-            tools:layout_editor_absoluteX="115dp" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_release_label" />
 
         <TextView
             android:id="@+id/tv_plot"
             android:layout_width="268dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="my plot.."
             android:textColor="@android:color/background_light"
             app:layout_constraintStart_toStartOf="@+id/tv_description_label"
             app:layout_constraintTop_toBottomOf="@+id/tv_description_label" />
